package TechESFOT;

public class EmpleadosValidacion extends Exception {
    public EmpleadosValidacion(String mensaje) {
        super(mensaje);
    }
}
